# refrigerator.goldsrc

./: CMakeLists.txt  README.md  kconfig.cmake
.github/workflows/: main.yml
extra/lib/: kconfig.Makefile.in
extra/lib/cmake/: auxiliary.cmake  dependencies.cmake
extra/lib/cmake/auxiliary/: get_target_namespace.cmake  get_timestamp.cmake  get_version.cmake  include_all.cmake  kconfig.cmake
extra/lib/cmake/dependencies/: boost.cmake  p5-lambda.cmake
extra/lib/python3/_auxiliary/: __init__.py
extra/lib/python3/_auxiliary/common/: lazy_attributes.py  property_collector.py
extra/lib/python3/_auxiliary/kconfig/: __init__.py  _class.py
extra/utils/: kconfig.py
meta/: CMakeLists.txt
meta/src/: api.cxx  api.hxx  binding.hxx  bindings.cxx  bindings.hxx  core.cxx  core.hxx  exception.hxx  export.cxx  linkspec.h  log.cxx  log.hxx  namespace_.hxx  root_.cxx  root_.hxx  singleton.cxx  singleton.hxx
meta/src/core/: api.cxx  api.hxx  binding.hxx  bindings.cxx  bindings.hxx  container.hxx  log.cxx  log.hxx  module.cxx  module.hxx  namespace_.hxx  type.cxx  type.hxx
meta/src/features/: butchering.cxx  butchering.hxx  client_variables.cxx  client_variables.hxx  deity.cxx  deity.hxx  junk_controller.cxx  junk_controller.hxx  namespace_.hxx  report.cxx  report.hxx  trusted_entities.cxx  trusted_entities.hxx  visibility_controller.cxx  visibility_controller.hxx
meta/src/features/butchering/: fade_trap_.cxx  fade_trap_.hxx  namespace_.hxx
meta/src/features/visibility_controller/: api_.cxx  api_.hxx  client_.cxx  client_.hxx  current_pack_.cxx  current_pack_.hxx  limit_.cxx  limit_.hxx  namespace_.hxx
